--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,5 @@ server.servlet.encoding.force=true
 spring.profiles.active=local
 logging.level.root=info
 
+server.servlet.jsp.init-parameters.development=true 
 
