--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,17 @@
 		<groupId>org.apache.tiles</groupId>
 		<artifactId>tiles-jsp</artifactId>
 		<version>3.0.8</version>
-	</dependency>
+		</dependency>	
+		
+	<dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
+</dependency>
+
+
+
+
 	
 
 	</dependencies> 
