--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,12 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter-test</artifactId>
+		    <version>2.1.3</version>
+		    <scope>test</scope>
+		</dependency>
 	<!-- tilesViewResolver -->
 	<dependency>
 		<groupId>org.apache.tiles</groupId>
