--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -63,13 +63,28 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter-test</artifactId>
+		    <version>2.1.3</version>
+		    <scope>test</scope>
+		</dependency>
 	<!-- tilesViewResolver -->
 	<dependency>
 		<groupId>org.apache.tiles</groupId>
 		<artifactId>tiles-jsp</artifactId>
 		<version>3.0.8</version>
-	</dependency>
+		</dependency>	
+		
+	<dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
+</dependency>
+
+
+
+
 	
 
 	</dependencies> 
