--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # oracle set
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
 spring.datasource.password=hr
@@ -14,14 +14,13 @@ spring.servlet.multipart.location=C:\\shopimg
 
 mybatis.mapper-locations: static/mappers/*Mapper.xml
 
-# 한글 인코딩
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
-# 로그 세팅
 spring.profiles.active=local
 logging.level.root=info
+
 
 
 
