keep session, change static files immediately
서버 재시작해도 세션 유지되도록, 정적파일 서버 재시작하지 않아도 바로
적용되도록, qnaQuestionForm 이미지 등록 안하면 에러뜨는거 디버그
했습니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ server.servlet.encoding.force=true
 spring.profiles.active=local
 logging.level.root=info
 
+#정적파일 바로적용
+server.servlet.jsp.init-parameters.development=true 
 
+#세션 지속성 활성화
+server.servlet.session.persistent=true
 
 
