--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <version>2.8.5</version>
 </dependency>
 
-
+<!-- 정적파일 변경 바로 적용 -->
    <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
