--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -21,6 +21,10 @@ server.servlet.encoding.force=true
 spring.profiles.active=local
 logging.level.root=info
 
+#정적파일 바로적용
+server.servlet.jsp.init-parameters.development=true 
 
+#세션 지속성 활성화
+server.servlet.session.persistent=true
 
 
